<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    tools:context=".LogActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="420dp"
        android:layout_height="676dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/bg_custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="272dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/setArrival"
            android:textColor="#474343"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="74dp"
            tools:layout_editor_absoluteY="45dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setArrival_text1"
            android:textColor="#474343"
            android:textSize="17sp"
            tools:layout_editor_absoluteX="29dp"
            tools:layout_editor_absoluteY="124dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setArrival_text2"
            android:textColor="#474343"
            android:textSize="17sp"
            tools:layout_editor_absoluteX="47dp"
            tools:layout_editor_absoluteY="179dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_custom_button"
            android:text="@string/selectSchedule"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="145dp"
            tools:layout_editor_absoluteY="234dp"
            tools:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="300dp"
            android:layout_height="10dp"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="100dp" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="304dp"
            android:layout_height="303dp"
            tools:layout_editor_absoluteX="58dp"
            tools:layout_editor_absoluteY="282dp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:background="@drawable/bg_grey_button"
            android:text="@string/right"
            tools:layout_editor_absoluteX="275dp"
            tools:layout_editor_absoluteY="592dp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:background="@drawable/bg_grey_button"
            android:text="@string/left"
            tools:layout_editor_absoluteX="110dp"
            tools:layout_editor_absoluteY="592dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/back"
        android:textColor="#FFFCFC"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/next"
        android:textColor="#FFFCFC"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>